[mv3] Minor changes

--- a/platform/mv3/extension/css/picker-ui.css
+++ b/platform/mv3/extension/css/picker-ui.css
@@ -49,7 +49,7 @@
     color: var(--ink-2);
     display: flex;
     flex-direction: column;
-    font-size: smaller;
+    font-size: small;
     gap: 0.25em;
 }
 #ubol-picker .resultsetWidgets > span:first-of-type {
