[mv3] Make new spinner in "Filter lists" pane more noticeable

--- a/platform/mv3/extension/css/settings.css
+++ b/platform/mv3/extension/css/settings.css
@@ -91,6 +91,7 @@ body:not(.committing) #commit-spinner {
     }
 body.committing #commit-spinner {
     animation: spin 1s steps(8) infinite;
+    fill: var(--accent-surface-1);
     }
 #dnrError {
     color: var(--info3-ink);
