[mv3] Add page-wide spinner when restoring/resetting settings

--- a/platform/mv3/extension/css/settings.css
+++ b/platform/mv3/extension/css/settings.css
@@ -347,3 +347,15 @@ section[data-pane="filters"] aside p {
         justify-content: flex-start;
     }
 }
+
+body.busy section[data-pane="busy"]  > div {
+    justify-content: center;
+    display: flex;
+    align-items: stretch;
+}
+body.busy section[data-pane="busy"] .fa-icon {
+    animation: spin 1s steps(8) infinite;
+    fill: var(--surface-3);
+    font-size: 4em;
+    margin: 2em;
+}
