[mv3] Fine tune busy state of popup panel

--- a/platform/mv3/extension/css/popup.css
+++ b/platform/mv3/extension/css/popup.css
@@ -55,6 +55,7 @@ aside {
     display: none;
     left: 0;
     opacity: 0;
+    overflow: hidden;
     position: absolute;
     right: 0;
     top: 0;
